# miniapp-cdp-mcp

./: .gitignore  README.md  README_en.md  Taskfile.yml  pyproject.toml  run_mcp_server.py  改进空间
.github/workflows/: publish.yml
docs/: PUBLISH_GUIDE.md
examples/: vipshop_decrypt_demo.py
src/miniapp_cdp/: __init__.py  cdp_runtime.py  cli_sample.py  endpoint.py  event_bus.py  mcp_server.py  models.py  network_capture.py  server.py  state_store.py
src/miniapp_cdp/collectors/: __init__.py  single_target_network.py  websocket_models.py
src/miniapp_cdp/tools/: connect_tools.py  debugger_tools.py  network_tools.py  script_tools.py  target_tools.py  websocket_tools.py
tests/: print_network_requests.py
