[project]
name = "miniapp-cdp"
version = "0.1.5"
description = "Agent-native raw CDP over WebSocket MCP layer built on top of cdp-use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cdp-use",
    "mcp>=1.27.0",
    "python-socks>=2.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniapp_cdp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
miniapp-cdp-mcp = "miniapp_cdp.server:main"
